# gameoflife

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  GameOfLife  Makefile  README.md  cmake_install.cmake  display.cpp  display.h  gameoflife.cpp  gameoflife.h  gol  gol_test  gol_test[1]_include.cmake  gol_test[1]_tests.cmake  main.cpp  makefile  pixel
Testing/Temporary/: CTestCostData.txt
src/: display.cpp  display.h  displayInterface.h  gameoflife.cpp  gameoflife.h  input.cpp  input.h  main.cpp  test.cpp  util.h
